--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@
     /* gap: 150px; */
   }
 
+  .top-head .head-2,
+  .head-3 {
+    display: none;
+  }
+
+  .top-head .head-4 {
+    /* visibility: visible; */
+    display: block;
+  }
+
   .box-flex {
     width: 375px;
     display: flex;
@@ -83,7 +93,15 @@
     align-items: center;
   }
 
+  .box-flex .background {
+    height: 1050px;
+  }
+
   .box-fuel {
+    margin: 10px;
+    height: 170px;
+    display: flex;
+    flex-direction: column;
     order: 1;
   }
 
@@ -95,25 +113,56 @@
     font-size: 24px;
   }
 
-  .box-flex .background {
-    height: 1050px;
+  .box-circle .image-circle {
+    width: 283px;
+    height: 275px;
   }
 
-  .top-head .head-2,
-  .head-3 {
-    display: none;
+  .box-circle .box-square {
+    padding: 6px;
+    width: 76px;
+    height: 86px;
+    position: absolute;
+    top: 95px;
+    left: -30px;
   }
 
-  .top-head .head-4 {
-    /* visibility: visible; */
-    display: block;
+  div .square {
+    width: 64px;
+    height: 38px;
   }
 
-  .box-fuel {
-    margin: 10px;
-    height: 170px;
-    display: flex;
-    flex-direction: column;
+  div .mountain {
+    font-size: 5px;
+    margin: 4px;
+  }
+
+  .circle-main .circle {
+    margin-left: 2px;
+  }
+
+  div .circle {
+    width: 18px;
+    height: 18px;
+  }
+
+  .circle-main {
+    position: relative;
+  }
+
+  .circle-main .circle-2 {
+    position: absolute;
+    left: 14px;
+  }
+
+  .circle-main .circle-3 {
+    position: absolute;
+    left: 28px;
+  }
+
+  .circle-main .circle-4 {
+    position: absolute;
+    left: 42px;
   }
 
   div .container-selector {
@@ -147,58 +196,6 @@
     width: 50px;
   }
 
-  .box-circle .image-circle {
-    width: 283px;
-    height: 275px;
-  }
-
-  .box-circle .box-square {
-    padding: 6px;
-    width: 76px;
-    height: 86px;
-    position: absolute;
-    top: 95px;
-    left: -30px;
-  }
-
-  div .square {
-    width: 64px;
-    height: 38px;
-  }
-
-  div .mountain {
-    font-size: 5px;
-    margin: 4px;
-  }
-
-  div .circle {
-    width: 18px;
-    height: 18px;
-  }
-
-  .circle-main .circle {
-    margin-left: 2px;
-  }
-
-  .circle-main {
-    position: relative;
-  }
-
-  .circle-main .circle-2 {
-    position: absolute;
-    left: 14px;
-  }
-
-  .circle-main .circle-3 {
-    position: absolute;
-    left: 28px;
-  }
-
-  .circle-main .circle-4 {
-    position: absolute;
-    left: 42px;
-  }
-
   .explore {
     width: 180px;
     height: 70px;
@@ -212,6 +209,7 @@
   margin: 0;
 }
 
+/* Start of class contain-section-1 */
 .contain-section-1 {
   width: 100vw;
   display: flex;
@@ -219,6 +217,7 @@
   position: relative;
 }
 
+/* Start of class top-head  line 60(html)*/
 .top-head {
   padding: 25px;
   display: flex;
@@ -292,10 +291,18 @@
   border: 3px solid white;
 }
 
+/* Start of class box-flex line 81(html) */
 .box-flex {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.background {
+  position: absolute;
+  width: 100vw;
+  height: 820px;
+  z-index: -1;
 }
 
 .box-fuel {
@@ -316,6 +323,7 @@
   font-weight: 400;
 }
 
+/* Start of class box-circle line 91(html) */
 .box-circle {
   position: relative;
 }
@@ -392,6 +400,7 @@
   left: 75px;
 }
 
+/* Start of class container-selector line 106(html) */
 .container-selector {
   width: 100vw;
   border-radius: 20px;
@@ -435,10 +444,6 @@ hr {
   color: #221314;
 }
 
-.fas {
-  color: #ff8345;
-}
-
 .explore {
   width: 180px;
   height: 70px;
@@ -449,17 +454,14 @@ hr {
   background-image: linear-gradient(180deg, #fe5b3e, #fe7b49);
 }
 
+.fas {
+  color: #ff8345;
+}
+
 button:hover {
   background-image: linear-gradient(180deg, #ff4929, #ff6f36ef);
 }
 
 .explore .fas {
   color: white;
-}
-
-.background {
-  position: absolute;
-  width: 100vw;
-  height: 820px;
-  z-index: -1;
 }
